rutas arregladas con nombres de fotos actualizadas

--- a/en/rutas.html
+++ b/en/rutas.html
@@ -134,7 +134,7 @@
                 <article class="route-card route-item" data-difficulty="Moderada">
                     <div class="card-img-wrapper">
                         <span class="card-tag">Mountain</span>
-                        <img src="../img/WhatsApp%20Image%202025-12-01%20at%2020.07.482.jpeg"
+                        <img src="../img/foto4.jpeg"
                             alt="Pico Tres Mares route image" class="card-img" loading="lazy">
                     </div>
                     <div class="card-body">
@@ -173,10 +173,10 @@
                 </article>
 
                 <!-- Nacimiento del Ebro -->
-                <article class="route-card route-item" data-difficulty="Fácil">
+                <article class="route-card route-item" data-difficulty="Easy">
                     <div class="card-img-wrapper">
                         <span class="card-tag">Family</span>
-                        <img src="../img/WhatsApp%20Image%202025-12-01%20at%2020.07.484.jpeg"
+                        <img src="../img/foto3.jpeg"
                             alt="Nacimiento del Ebro route image" class="card-img" loading="lazy">
                     </div>
                     <div class="card-body">
@@ -215,10 +215,10 @@
                 </article>
 
                 <!-- Cueto de la Horcada -->
-                <article class="route-card route-item" data-difficulty="Difícil">
+                <article class="route-card route-item" data-difficulty="Hard">
                     <div class="card-img-wrapper">
                         <span class="card-tag">Expert</span>
-                        <img src="../img/WhatsApp%20Image%202025-12-01%20at%2020.07.483.jpeg"
+                        <img src="../img/foto2.jpeg"
                             alt="Cueto de la Horcada route image" class="card-img" loading="lazy">
                     </div>
                     <div class="card-body">
@@ -260,7 +260,7 @@
                 <article class="route-card route-item" data-difficulty="Moderada">
                     <div class="card-img-wrapper">
                         <span class="card-tag">Panoramic</span>
-                        <img src="../img/WhatsApp%20Image%202025-12-01%20at%2020.07.48.jpeg"
+                        <img src="../img/foto1.jpeg"
                             alt="Brañavieja Circular route image" class="card-img" loading="lazy">
                     </div>
                     <div class="card-body">
