rutas arregladas con nombres de fotos actualizadas

--- a/en/rutas.html
+++ b/en/rutas.html
@@ -131,7 +131,7 @@
 
             <div class="grid-layout" id="routes-grid" aria-label="Hiking routes list">
                 <!-- Pico Tres Mares -->
-                <article class="route-card route-item" data-difficulty="Moderada">
+                <article class="route-card route-item" data-difficulty="Moderate">
                     <div class="card-img-wrapper">
                         <span class="card-tag">Mountain</span>
                         <img src="../img/foto4.jpeg"
@@ -257,7 +257,7 @@
                 </article>
 
                 <!-- Brañavieja Circular -->
-                <article class="route-card route-item" data-difficulty="Moderada">
+                <article class="route-card route-item" data-difficulty="Moderate">
                     <div class="card-img-wrapper">
                         <span class="card-tag">Panoramic</span>
                         <img src="../img/foto1.jpeg"
