colores y errores menores corregidos en index, novedades y actividades

--- a/en/index.html
+++ b/en/index.html
@@ -215,7 +215,7 @@
                     <ul class="carousel-track" id="featured-routes">
                         <!-- Items del carrusel (sin cambios) -->
                         <li class="route-item" id="ruta-1">
-                            <article class="route-card" data-difficulty="Moderada">
+                            <article class="route-card" data-difficulty="Moderate">
                                 <header class="card-header">
                                     <figure class="card-img-wrapper">
                                         <mark class="card-tag">Montaña</mark>
@@ -227,9 +227,12 @@
                                     <h3 id="txt-slide1">Pico Tres Mares</h3>
                                     <footer class="card-meta">
                                         <button type="button" class="meta-item" aria-describedby="tt-diff-1">
-                                            <span class="orange material-symbols-outlined"
-                                                aria-hidden="true">timeline</span>
-                                            <span>Moderada</span>
+                                            <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 -960 960 960"
+                                                width="16" fill="currentColor" class="svg-inline" aria-hidden="true">
+                                                <path
+                                                    d="M120-240q-33 0-56.5-23.5T40-320q0-33 23.5-56.5T120-400h10.5q4.5 0 9.5 2l182-182q-2-5-2-9.5V-600q0-33 23.5-56.5T400-680q33 0 56.5 23.5T480-600q0 2-2 20l102 102q5-2 9.5-2h21q4.5 0 9.5 2l142-142q-2-5-2-9.5V-640q0-33 23.5-56.5T840-720q33 0 56.5 23.5T920-640q0 33-23.5 56.5T840-560h-10.5q-4.5 0-9.5-2L678-420q2 5 2 9.5v10.5q0 33-23.5 56.5T600-320q-33 0-56.5-23.5T520-400v-10.5q0-4.5 2-9.5L420-522q-5 2-9.5 2H400q-2 0-20-2L198-340q2 5 2 9.5v10.5q0 33-23.5 56.5T120-240Z" />
+                                            </svg>
+                                            <span>Moderate</span>
                                             <span class="tooltip" role="tooltip" id="tt-diff-1">Difficulty</span>
                                         </button>
                                         <button type="button" class="meta-item" aria-describedby="tt-time-1">
@@ -250,7 +253,7 @@
                         </li>
 
                         <li class="route-item" id="ruta-2">
-                            <article class="route-card" data-difficulty="Fácil">
+                            <article class="route-card" data-difficulty="Easy">
                                 <header class="card-header">
                                     <figure class="card-img-wrapper">
                                         <mark class="card-tag">Familiar</mark>
@@ -262,8 +265,11 @@
                                     <h3 id="txt-slide2">Nacimiento del Ebro</h3>
                                     <footer class="card-meta">
                                         <button type="button" class="meta-item" aria-describedby="tt-diff-2">
-                                            <span class="material-symbols-outlined green"
-                                                aria-hidden="true">timeline</span>
+                                            <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 -960 960 960"
+                                                width="16" fill="currentColor" class="svg-inline" aria-hidden="true">
+                                                <path
+                                                    d="M120-240q-33 0-56.5-23.5T40-320q0-33 23.5-56.5T120-400h10.5q4.5 0 9.5 2l182-182q-2-5-2-9.5V-600q0-33 23.5-56.5T400-680q33 0 56.5 23.5T480-600q0 2-2 20l102 102q5-2 9.5-2h21q4.5 0 9.5 2l142-142q-2-5-2-9.5V-640q0-33 23.5-56.5T840-720q33 0 56.5 23.5T920-640q0 33-23.5 56.5T840-560h-10.5q-4.5 0-9.5-2L678-420q2 5 2 9.5v10.5q0 33-23.5 56.5T600-320q-33 0-56.5-23.5T520-400v-10.5q0-4.5 2-9.5L420-522q-5 2-9.5 2H400q-2 0-20-2L198-340q2 5 2 9.5v10.5q0 33-23.5 56.5T120-240Z" />
+                                            </svg>
                                             <span>Easy</span>
                                             <span class="tooltip" role="tooltip" id="tt-diff-2">Difficulty</span>
                                         </button>
@@ -297,8 +303,11 @@
                                     <h3 id="txt-slide3">Cueto de la Horcada</h3>
                                     <footer class="card-meta">
                                         <button type="button" class="meta-item" aria-describedby="tt-diff-3">
-                                            <span class="material-symbols-outlined red"
-                                                aria-hidden="true">timeline</span>
+                                            <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 -960 960 960"
+                                                width="16" fill="currentColor" class="svg-inline" aria-hidden="true">
+                                                <path
+                                                    d="M120-240q-33 0-56.5-23.5T40-320q0-33 23.5-56.5T120-400h10.5q4.5 0 9.5 2l182-182q-2-5-2-9.5V-600q0-33 23.5-56.5T400-680q33 0 56.5 23.5T480-600q0 2-2 20l102 102q5-2 9.5-2h21q4.5 0 9.5 2l142-142q-2-5-2-9.5V-640q0-33 23.5-56.5T840-720q33 0 56.5 23.5T920-640q0 33-23.5 56.5T840-560h-10.5q-4.5 0-9.5-2L678-420q2 5 2 9.5v10.5q0 33-23.5 56.5T600-320q-33 0-56.5-23.5T520-400v-10.5q0-4.5 2-9.5L420-522q-5 2-9.5 2H400q-2 0-20-2L198-340q2 5 2 9.5v10.5q0 33-23.5 56.5T120-240Z" />
+                                            </svg>
                                             <span>Hard</span>
                                             <span class="tooltip" role="tooltip" id="tt-diff-3">Difficulty</span>
                                         </button>
@@ -320,7 +329,7 @@
                         </li>
 
                         <li class="route-item" id="ruta-4">
-                            <article class="route-card" data-difficulty="Moderada">
+                            <article class="route-card" data-difficulty="Moderate">
                                 <header class="card-header">
                                     <figure class="card-img-wrapper">
                                         <mark class="card-tag">Panorámica</mark>
@@ -332,8 +341,11 @@
                                     <h3 id="txt-slide4">Brañavieja Circular</h3>
                                     <footer class="card-meta">
                                         <button type="button" class="meta-item" aria-describedby="tt-diff-4">
-                                            <span class="material-symbols-outlined orange"
-                                                aria-hidden="true">timeline</span>
+                                            <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 -960 960 960"
+                                                width="16" fill="currentColor" class="svg-inline" aria-hidden="true">
+                                                <path
+                                                    d="M120-240q-33 0-56.5-23.5T40-320q0-33 23.5-56.5T120-400h10.5q4.5 0 9.5 2l182-182q-2-5-2-9.5V-600q0-33 23.5-56.5T400-680q33 0 56.5 23.5T480-600q0 2-2 20l102 102q5-2 9.5-2h21q4.5 0 9.5 2l142-142q-2-5-2-9.5V-640q0-33 23.5-56.5T840-720q33 0 56.5 23.5T920-640q0 33-23.5 56.5T840-560h-10.5q-4.5 0-9.5-2L678-420q2 5 2 9.5v10.5q0 33-23.5 56.5T600-320q-33 0-56.5-23.5T520-400v-10.5q0-4.5 2-9.5L420-522q-5 2-9.5 2H400q-2 0-20-2L198-340q2 5 2 9.5v10.5q0 33-23.5 56.5T120-240Z" />
+                                            </svg>
                                             <span>Moderate</span>
                                             <span class="tooltip" role="tooltip" id="tt-diff-4">Difficulty</span>
                                         </button>
