--- a/en/rutas.html
+++ b/en/rutas.html
@@ -11,10 +11,14 @@
     <!-- Preconnect para Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+
     <!-- Google Fonts con display=swap -->
-    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Roboto:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap"
+        rel="stylesheet">
 
     <!-- Estilos -->
     <link rel="stylesheet" href="../estilo/main.css">
@@ -78,8 +82,7 @@
                     </nav>
                 </div>
 
-                <input type="checkbox" id="menu-logic-state" class="menu-logic-check"
-                    aria-label="Navigation menu">
+                <input type="checkbox" id="menu-logic-state" class="menu-logic-check" aria-label="Navigation menu">
 
                 <label for="menu-logic-state" class="menu-toggle hamburger">
                     <span class="icon-open material-symbols-outlined">menu</span>
@@ -89,7 +92,8 @@
                     <div class="mobile-menu-header">
                         <a href="index.html#top" class="logo mobile-logo">
                             <div class="logo-brand">
-                                <img src="../img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150" height="50">
+                                <img src="../img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img"
+                                    width="150" height="50">
                             </div>
                         </a>
                         <label for="menu-logic-state" class="close-trigger">
@@ -124,9 +128,9 @@
             <!-- Filtros -->
             <div class="route-filters" role="group" aria-label="Filter routes by difficulty">
                 <button class="btn btn-primary filter-btn active" data-filter="all" aria-pressed="true">All</button>
-                <button class="btn btn-outline filter-btn" data-filter="Fácil" aria-pressed="false">Easy</button>
-                <button class="btn btn-outline filter-btn" data-filter="Moderada" aria-pressed="false">Moderate</button>
-                <button class="btn btn-outline filter-btn" data-filter="Difícil" aria-pressed="false">Difficult</button>
+                <button class="btn btn-outline filter-btn" data-filter="Easy" aria-pressed="false">Easy</button>
+                <button class="btn btn-outline filter-btn" data-filter="Moderate" aria-pressed="false">Moderate</button>
+                <button class="btn btn-outline filter-btn" data-filter="Hard" aria-pressed="false">Difficult</button>
             </div>
 
             <div class="grid-layout" id="routes-grid" aria-label="Hiking routes list">
@@ -134,8 +138,7 @@
                 <article class="route-card route-item" data-difficulty="Moderate">
                     <div class="card-img-wrapper">
                         <span class="card-tag">Mountain</span>
-                        <img src="../img/foto4.jpeg"
-                            alt="Pico Tres Mares route image" class="card-img" loading="lazy">
+                        <img src="../img/foto4.jpeg" alt="Pico Tres Mares route image" class="card-img" loading="lazy">
                     </div>
                     <div class="card-body">
                         <h3>Pico Tres Mares</h3>
@@ -168,7 +171,7 @@
                                 <span class="tooltip" role="tooltip" id="tt-dist-1">Distance</span>
                             </button>
                         </div>
-                        <button class="btn btn-outline btn-card">View Details</button>
+                        <button class="btn btn-outline btn-card">View Detail</button>
                     </div>
                 </article>
 
@@ -176,8 +179,8 @@
                 <article class="route-card route-item" data-difficulty="Easy">
                     <div class="card-img-wrapper">
                         <span class="card-tag">Family</span>
-                        <img src="../img/foto3.jpeg"
-                            alt="Nacimiento del Ebro route image" class="card-img" loading="lazy">
+                        <img src="../img/foto3.jpeg" alt="Nacimiento del Ebro route image" class="card-img"
+                            loading="lazy">
                     </div>
                     <div class="card-body">
                         <h3>Nacimiento del Ebro</h3>
@@ -210,7 +213,7 @@
                                 <span class="tooltip" role="tooltip" id="tt-dist-2">Distance</span>
                             </button>
                         </div>
-                        <button class="btn btn-outline btn-card">View Details</button>
+                        <button class="btn btn-outline btn-card">View Detail</button>
                     </div>
                 </article>
 
@@ -218,8 +221,8 @@
                 <article class="route-card route-item" data-difficulty="Hard">
                     <div class="card-img-wrapper">
                         <span class="card-tag">Expert</span>
-                        <img src="../img/foto2.jpeg"
-                            alt="Cueto de la Horcada route image" class="card-img" loading="lazy">
+                        <img src="../img/foto2.jpeg" alt="Cueto de la Horcada route image" class="card-img"
+                            loading="lazy">
                     </div>
                     <div class="card-body">
                         <h3>Cueto de la Horcada</h3>
@@ -252,7 +255,7 @@
                                 <span class="tooltip" role="tooltip" id="tt-dist-3">Distance</span>
                             </button>
                         </div>
-                        <button class="btn btn-outline btn-card">View Details</button>
+                        <button class="btn btn-outline btn-card">View Detail</button>
                     </div>
                 </article>
 
@@ -260,8 +263,8 @@
                 <article class="route-card route-item" data-difficulty="Moderate">
                     <div class="card-img-wrapper">
                         <span class="card-tag">Panoramic</span>
-                        <img src="../img/foto1.jpeg"
-                            alt="Brañavieja Circular route image" class="card-img" loading="lazy">
+                        <img src="../img/foto1.jpeg" alt="Brañavieja Circular route image" class="card-img"
+                            loading="lazy">
                     </div>
                     <div class="card-body">
                         <h3>Brañavieja Circular</h3>
@@ -294,7 +297,7 @@
                                 <span class="tooltip" role="tooltip" id="tt-dist-4">Distance</span>
                             </button>
                         </div>
-                        <button class="btn btn-outline btn-card">View Details</button>
+                        <button class="btn btn-outline btn-card">View Detail</button>
                     </div>
                 </article>
             </div>
@@ -359,4 +362,3 @@
 </body>
 
 </html>
-
