chore: Relocate favicon, update social media image, and refine page links and styling.

--- a/novedades.html
+++ b/novedades.html
@@ -24,7 +24,6 @@
         <title>Proyecto ACTEA | Alto Campoo Todo El Año</title>
 
         <!-- Precarga de Imágenes Críticas -->
-        <link rel="preload" as="image" href="img/hero.webp" type="image/webp" fetchpriority="high">
         <link rel="preload" as="image" href="img/logotipo.png">
 
         <!-- Estilos para todo, Carga lenta para que priorice primero el HTML -->
@@ -49,12 +48,12 @@
         <a href="#main-content" class="visually-hidden">Saltar al contenido principal</a>
         <a id="top" class="visually-hidden" aria-hidden="true"></a>
 
-    <!-- Header -->
-    <header class="header">
-        <div class="container header-container">
-            <a href="index.html#top" class="logo">
-                <div class="logo-brand">
-                    <img src="img/logotipo.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
+        <!-- Header -->
+        <header class="header">
+            <div class="container header-container">
+                <a href="index.html" class="logo">
+                    <div class="logo-brand">
+                        <img src="img/logotipo.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
                     </div>
                 </a>
 
@@ -105,9 +104,10 @@
 
                     <nav class="mobile-menu">
                         <div class="mobile-menu-header">
-                            <a href="index.html#top" class="logo mobile-logo">
+                            <a href="index.html" class="logo mobile-logo">
                                 <div class="logo-brand">
-                                    <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150" height="50">
+                                    <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img"
+                                        width="150" height="50">
                                 </div>
                             </a>
                             <label for="menu-logic-state" class="close-trigger">
