--- a/actividades.html
+++ b/actividades.html
@@ -24,7 +24,6 @@
         <title>Proyecto ACTEA | Alto Campoo Todo El Año</title>
 
         <!-- Precarga de Imágenes Críticas -->
-        <link rel="preload" as="image" href="img/hero.webp" type="image/webp" fetchpriority="high">
         <link rel="preload" as="image" href="img/logotipo.png">
 
         <!-- Estilos para todo, Carga lenta para que priorice primero el HTML -->
@@ -50,118 +49,119 @@
         <a href="#main-content" class="visually-hidden">Saltar al contenido principal</a>
         <a id="top" class="visually-hidden" aria-hidden="true"></a>
 
-    <!-- Header -->
-    <header class="header">
-        <div class="container header-container">
-            <a href="index.html#top" class="logo">
-                <div class="logo-brand">
-                    <img src="img/logotipo.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
-                </div>
-            </a>
-
-            <!-- Navegación Desktop -->
-            <nav class="nav-desktop" aria-label="Navegación principal">
-                <ul class="nav-list">
-                    <li><a href="index.html#top" class="nav-link">Inicio</a></li>
-                    <li><a href="rutas.html" class="nav-link">Rutas</a></li>
-                    <li><a href="novedades.html" class="nav-link">Novedades</a></li>
-                    <li><a href="actividades.html" class="nav-link active">Actividades</a></li>
-                    <li><a href="informacion.html" class="nav-link">Información</a></li>
-                </ul>
-            </nav>
-
-            <!-- Widgets -->
-            <div class="header-widgets">
-                <div class="weather-widget" id="weather-widget" title="Clima en Alto Campoo">
-                    <span class="material-symbols-outlined">wb_cloudy</span>
-                    <span class="weather-temp">--°C</span>
-                </div>
-
-                <div class="lang-dropdown">
-                    <a href="#lang-menu" class="lang-trigger" aria-label="Cambiar idioma">
-                        ES <span class="material-symbols-outlined">expand_more</span>
-                    </a>
-
-                    <nav id="lang-menu" class="lang-menu-content">
-                        <ul class="lang-list">
-                            <li>
-                                <a href="actividades.html" class="lang-item active">
-                                    <span class="material-symbols-outlined check-icon">check</span>
-                                    Español
-                                </a>
-                            </li>
-                            <li>
-                                <a href="en/actividades.html" class="lang-item">
-                                    English
-                                </a>
-                            </li>
-                        </ul>
-                        <a href="#" class="lang-close-overlay">Cerrar Lista de Idiomas</a>
-                    </nav>
-                </div>
-
-                <input type="checkbox" id="menu-logic-state" class="menu-logic-check"
-                    aria-label="Menú de navegación">
-
-                <label for="menu-logic-state" class="menu-toggle hamburger">
-                    <span class="icon-open material-symbols-outlined">menu</span>
-                </label>
-
-                <nav class="mobile-menu">
-                    <div class="mobile-menu-header">
-                        <a href="index.html#top" class="logo mobile-logo">
-                            <div class="logo-brand">
-                                <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150" height="50">
-                            </div>
-                        </a>
-                        <label for="menu-logic-state" class="close-trigger">
-                            <span class="material-symbols-outlined" aria-hidden="true">close</span>
-                            <span class="visually-hidden">Cerrar menú de navegación</span>
-                        </label>
+        <!-- Header -->
+        <header class="header">
+            <div class="container header-container">
+                <a href="index.html" class="logo">
+                    <div class="logo-brand">
+                        <img src="img/logotipo.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
                     </div>
-                    <nav aria-label="Navegación móvil">
-                        <ul class="mobile-nav-list">
-                            <li><a href="index.html#top">Inicio</a></li>
-                            <li><a href="rutas.html">Rutas</a></li>
-                            <li><a href="novedades.html">Novedades</a></li>
-                            <li><a href="actividades.html">Actividades</a></li>
-                            <li><a href="informacion.html">Información</a></li>
-                        </ul>
-                    </nav>
+                </a>
+
+                <!-- Navegación Desktop -->
+                <nav class="nav-desktop" aria-label="Navegación principal">
+                    <ul class="nav-list">
+                        <li><a href="index.html#top" class="nav-link">Inicio</a></li>
+                        <li><a href="rutas.html" class="nav-link">Rutas</a></li>
+                        <li><a href="novedades.html" class="nav-link">Novedades</a></li>
+                        <li><a href="actividades.html" class="nav-link active">Actividades</a></li>
+                        <li><a href="informacion.html" class="nav-link">Información</a></li>
+                    </ul>
                 </nav>
 
-                <div class="mobile-menu-overlay"></div>
-            </div>
-        </div>
-    </header>
+                <!-- Widgets -->
+                <div class="header-widgets">
+                    <div class="weather-widget" id="weather-widget" title="Clima en Alto Campoo">
+                        <span class="material-symbols-outlined">wb_cloudy</span>
+                        <span class="weather-temp">--°C</span>
+                    </div>
 
-    <!-- MAIN CONTENT AREA -->
-    <main id="main-content">
-        <section class="section-padding container" aria-label="Actividades complementarias">
-            <div class="text-center section-header">
-                <h1>Actividades Complementarias</h1>
-                <p>Disfruta de Alto Campoo de mil maneras diferentes.</p>
+                    <div class="lang-dropdown">
+                        <a href="#lang-menu" class="lang-trigger" aria-label="Cambiar idioma">
+                            ES <span class="material-symbols-outlined">expand_more</span>
+                        </a>
+
+                        <nav id="lang-menu" class="lang-menu-content">
+                            <ul class="lang-list">
+                                <li>
+                                    <a href="actividades.html" class="lang-item active">
+                                        <span class="material-symbols-outlined check-icon">check</span>
+                                        Español
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="en/actividades.html" class="lang-item">
+                                        English
+                                    </a>
+                                </li>
+                            </ul>
+                            <a href="#" class="lang-close-overlay">Cerrar Lista de Idiomas</a>
+                        </nav>
+                    </div>
+
+                    <input type="checkbox" id="menu-logic-state" class="menu-logic-check"
+                        aria-label="Menú de navegación">
+
+                    <label for="menu-logic-state" class="menu-toggle hamburger">
+                        <span class="icon-open material-symbols-outlined">menu</span>
+                    </label>
+
+                    <nav class="mobile-menu">
+                        <div class="mobile-menu-header">
+                            <a href="index.html" class="logo mobile-logo">
+                                <div class="logo-brand">
+                                    <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img"
+                                        width="150" height="50">
+                                </div>
+                            </a>
+                            <label for="menu-logic-state" class="close-trigger">
+                                <span class="material-symbols-outlined" aria-hidden="true">close</span>
+                                <span class="visually-hidden">Cerrar menú de navegación</span>
+                            </label>
+                        </div>
+                        <nav aria-label="Navegación móvil">
+                            <ul class="mobile-nav-list">
+                                <li><a href="index.html#top">Inicio</a></li>
+                                <li><a href="rutas.html">Rutas</a></li>
+                                <li><a href="novedades.html">Novedades</a></li>
+                                <li><a href="actividades.html">Actividades</a></li>
+                                <li><a href="informacion.html">Información</a></li>
+                            </ul>
+                        </nav>
+                    </nav>
+
+                    <div class="mobile-menu-overlay"></div>
+                </div>
             </div>
-            <div class="grid-layout">
-                <div class="activity-card activity-card-1">
-                    <div class="activity-overlay">
-                        <h3 class="activity-title">Cicloturismo</h3>
-                        <p>Rutas BTT señalizadas para todos los niveles.</p>
+        </header>
+
+        <!-- MAIN CONTENT AREA -->
+        <main id="main-content">
+            <section class="section-padding container" aria-label="Actividades complementarias">
+                <div class="text-center section-header">
+                    <h1>Actividades Complementarias</h1>
+                    <p>Disfruta de Alto Campoo de mil maneras diferentes.</p>
+                </div>
+                <div class="grid-layout">
+                    <div class="activity-card activity-card-1">
+                        <div class="activity-overlay">
+                            <h2 class="activity-title">Cicloturismo</h2>
+                            <p>Rutas BTT señalizadas para todos los niveles.</p>
+                        </div>
+                    </div>
+                    <div class="activity-card activity-card-2">
+                        <div class="activity-overlay">
+                            <h2 class="activity-title">Observación de Fauna</h2>
+                            <p>Avistamiento de venados, rebecos y aves rapaces.</p>
+                        </div>
+                    </div>
+                    <div class="activity-card activity-card-3">
+                        <div class="activity-overlay">
+                            <h2 class="activity-title">Gastronomía</h2>
+                            <p>Descubre los sabores tradicionales de los pueblos del valle.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="activity-card activity-card-2">
-                    <div class="activity-overlay">
-                        <h3 class="activity-title">Observación de Fauna</h3>
-                        <p>Avistamiento de venados, rebecos y aves rapaces.</p>
-                    </div>
-                </div>
-                <div class="activity-card activity-card-3">
-                    <div class="activity-overlay">
-                        <h3 class="activity-title">Gastronomía</h3>
-                        <p>Descubre los sabores tradicionales de los pueblos del valle.</p>
-                    </div>
-                </div>
-            </div>
             </section>
         </main>
 
