fix: Corrected `DC.Title` meta tag typo and adjusted hero section minimum height for mobile.

--- a/rutas.html
+++ b/rutas.html
@@ -34,7 +34,7 @@
         <!-- Meta Etiquetas para Redes Sociales -->
         <meta name="twitter:card" content="summary">
         <meta name="twitter:image" content="img/logotipo.png">
-        <meta name="DC.Title" coxntent="Proyecto ACTEA: Rutas">
+        <meta name="DC.Title" content="Proyecto ACTEA: Rutas">
         <meta property="og:site_name" content="Alto Campoo Todo El Año">
         <meta property="og:title" content="Proyecto ACTEA: Rutas">
         <meta property="og:description"
