feat: Enhance SEO and performance with new meta tags and lazy loading, update footer content, and remove weather widget display elements.

--- a/en/index.html
+++ b/en/index.html
@@ -72,8 +72,6 @@
                 <!-- Widgets -->
                 <div class="header-widgets">
                     <div class="weather-widget" id="weather-widget" title="Weather in Alto Campoo">
-                        <span class="material-symbols-outlined">wb_cloudy</span>
-                        <span class="weather-temp">--°C</span>
                     </div>
 
                     <div class="lang-dropdown">
@@ -564,7 +562,7 @@
                 <div class="copyright">
                     <p>
                         <a target="_blank"
-                            href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fproyectoactea.com&amp;profile=css3svg&amp;usermedium=all&amp;warning=1&amp;vextwarning="
+                            href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fproyectoactea.com/en/index.html&amp;profile=css3svg&amp;usermedium=all&amp;warning=1&amp;vextwarning="
                             title="CSS3 Validated">
                             <svg viewBox="0 0 88 31" width="95" height="50" aria-label="CSS3 Validated">
                                 <g shape-rendering="geometricPrecision" text-rendering="geometricPrecision"
@@ -1051,7 +1049,7 @@
                         </a>
 
                         <a target="_blank"
-                            href="https://validator.w3.org/nu/?showsource=yes&amp;showoutline=yes&amp;showimagereport=yes&amp;checkerrorpages=yes&amp;useragent=Validator.nu%2FLV+http%3A%2F%2Fvalidator.w3.org%2Fservices&amp;acceptlanguage=&amp;doc=https%3A%2F%2Fproyectoactea.com"
+                            href="https://validator.w3.org/nu/?showsource=yes&amp;showoutline=yes&amp;showimagereport=yes&amp;checkerrorpages=yes&amp;useragent=Validator.nu%2FLV+http%3A%2F%2Fvalidator.w3.org%2Fservices&amp;acceptlanguage=&amp;doc=https%3A%2F%2Fproyectoactea.com/en/index.html"
                             title="HTML5 Validated">
                             <svg viewBox="0 0 512 512" width="30" height="50" aria-label="HTML5 Validated">
                                 <polygon fill="#E44D26"
@@ -1082,7 +1080,8 @@
                                 </polygon>
                             </svg></a>
 
-                        <a target="_blank" href="https://wave.webaim.org/report#/https%3A%2F%2Fproyectoactea.com"
+                        <a target="_blank"
+                            href="https://wave.webaim.org/report#/https%3A%2F%2Fproyectoactea.com/en/index.html"
                             title="Accessibility WCAG 2.1 WAI-AAA Validated">
                             <svg viewBox="0 0 88 31" height="50" width="95"
                                 aria-label="Accessibility WCAG 2.1 WAI-AAA Validated">
