--- a/en/novedades.html
+++ b/en/novedades.html
@@ -60,7 +60,7 @@
 
                 <nav class="nav-desktop" aria-label="Navegación principal">
                     <ul class="nav-list">
-                        <li><a href="index.html#top" class="nav-link">Home</a></li>
+                        <li><a href="index.html" class="nav-link">Home</a></li>
                         <li><a href="rutas.html" class="nav-link">Routes</a></li>
                         <li><a href="novedades.html" class="nav-link active">News</a></li>
                         <li><a href="actividades.html" class="nav-link">Activities</a></li>
@@ -138,7 +138,7 @@
                             <span class="month">Dec</span>
                         </div>
                         <div class="news-content">
-                            <h3>Winter Routes Opening</h3>
+                            <h2>Winter Routes Opening</h2>
                             <p>Conditions are perfect for snowshoeing in the Calgosa area. Remember to
                                 check the weather forecast.</p>
                         </div>
@@ -149,7 +149,7 @@
                             <span class="month">Dec</span>
                         </div>
                         <div class="news-content">
-                            <h3>Night Photography Workshop</h3>
+                            <h2>Night Photography Workshop</h2>
                             <p>Learn to capture the Milky Way from the Fuente del Chivo viewpoint. Limited
                                 spots available.</p>
                         </div>
@@ -160,7 +160,7 @@
                             <span class="month">Jan</span>
                         </div>
                         <div class="news-content">
-                            <h3>Three Kings Route</h3>
+                            <h2>Three Kings Route</h2>
                             <p>Special event for families. Easy route with surprises for the little ones.
                             </p>
                         </div>
