--- a/en/rutas.html
+++ b/en/rutas.html
@@ -136,7 +136,7 @@
                 <div class="route-filters" id="filtros-rutas" role="group" aria-label="Filter routes by difficulty">
                 </div>
 
-                <div class="grid-layout" id="routes-grid" aria-label="Hiking routes list">
+                <div class="grid-layout" id="routes-grid">
                     <!-- Pico Tres Mares -->
                     <article class="route-card route-item rutas" data-difficulty="Moderate">
                         <div class="card-img-wrapper">
