--- a/en/index.html
+++ b/en/index.html
@@ -61,7 +61,7 @@
                 <!-- Navegación Desktop -->
                 <nav class="nav-desktop" aria-label="Main navigation">
                     <ul class="nav-list">
-                        <li><a href="index.html#top" class="nav-link active">Home</a></li>
+                        <li><a href="index.html" class="nav-link active">Home</a></li>
                         <li><a href="rutas.html" class="nav-link">Routes</a></li>
                         <li><a href="novedades.html" class="nav-link">News</a></li>
                         <li><a href="actividades.html" class="nav-link">Activities</a></li>
@@ -87,7 +87,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="index.html" class="lang-item active">
+                                    <a href="index.html#top" class="lang-item active">
                                         <span class="material-symbols-outlined check-icon">check</span>
                                         English
                                     </a>
@@ -112,7 +112,7 @@
                         </div>
                         <nav aria-label="Mobile navigation">
                             <ul class="mobile-nav-list">
-                                <li><a href="index.html#top">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="rutas.html">Routes</a></li>
                                 <li><a href="novedades.html">News</a></li>
                                 <li><a href="actividades.html">Activities</a></li>
