refactor: Remove `#top` anchor from home navigation links and update activity and route card titles from `h3` to `h2`.

--- a/en/actividades.html
+++ b/en/actividades.html
@@ -60,7 +60,7 @@
 
                 <nav class="nav-desktop" aria-label="Navegación principal">
                     <ul class="nav-list">
-                        <li><a href="index.html#top" class="nav-link">Home</a></li>
+                        <li><a href="index.html" class="nav-link">Home</a></li>
                         <li><a href="rutas.html" class="nav-link">Routes</a></li>
                         <li><a href="novedades.html" class="nav-link">News</a></li>
                         <li><a href="actividades.html" class="nav-link active">Activities</a></li>
@@ -110,7 +110,7 @@
                         </div>
                         <nav aria-label="Mobile navigation">
                             <ul class="mobile-nav-list">
-                                <li><a href="index.html#top">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="rutas.html">Routes</a></li>
                                 <li><a href="novedades.html">News</a></li>
                                 <li><a href="actividades.html">Activities</a></li>
@@ -134,19 +134,19 @@
                 <div class="grid-layout">
                     <div class="activity-card activity-card-1">
                         <div class="activity-overlay">
-                            <h3 class="activity-title">Cycling</h3>
+                            <h2 class="activity-title">Cycling</h2>
                             <p>Marked BTT routes for all levels.</p>
                         </div>
                     </div>
                     <div class="activity-card activity-card-2">
                         <div class="activity-overlay">
-                            <h3 class="activity-title">Wildlife Observation</h3>
+                            <h2 class="activity-title">Wildlife Observation</h2>
                             <p>Spotting deer, chamois and birds of prey.</p>
                         </div>
                     </div>
                     <div class="activity-card activity-card-3">
                         <div class="activity-overlay">
-                            <h3 class="activity-title">Gastronomy</h3>
+                            <h2 class="activity-title">Gastronomy</h2>
                             <p>Discover the traditional flavors of the valley's villages.</p>
                         </div>
                     </div>
