--- a/en/rutas.html
+++ b/en/rutas.html
@@ -60,7 +60,7 @@
 
                 <nav class="nav-desktop" aria-label="Navegación principal">
                     <ul class="nav-list">
-                        <li><a href="index.html#top" class="nav-link">Home</a></li>
+                        <li><a href="index.html" class="nav-link">Home</a></li>
                         <li><a href="rutas.html" class="nav-link active">Routes</a></li>
                         <li><a href="novedades.html" class="nav-link">News</a></li>
                         <li><a href="actividades.html" class="nav-link">Activities</a></li>
@@ -110,7 +110,7 @@
                         </div>
                         <nav aria-label="Mobile navigation">
                             <ul class="mobile-nav-list">
-                                <li><a href="index.html#top">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="rutas.html">Routes</a></li>
                                 <li><a href="novedades.html">News</a></li>
                                 <li><a href="actividades.html">Activities</a></li>
@@ -141,11 +141,10 @@
                     <article class="route-card route-item rutas" data-difficulty="Moderate">
                         <div class="card-img-wrapper">
                             <span class="card-tag">Mountain</span>
-                            <img src="../img/foto4.jpeg" alt="Pico Tres Mares route image" class="card-img"
-                                loading="lazy">
+                            <img src="../img/foto4.jpeg" alt="Route Pico Tres Mares" class="card-img" loading="lazy">
                         </div>
                         <div class="card-body">
-                            <h3>Pico Tres Mares</h3>
+                            <h2>Pico Tres Mares</h2>
                             <div class="card-meta">
                                 <button type="button" class="meta-item" tabindex="0" aria-describedby="tt-diff-1">
                                     <span class="material-symbols-outlined orange" aria-hidden="true">timeline</span>
@@ -171,11 +170,10 @@
                     <article class="route-card route-item rutas" data-difficulty="Easy">
                         <div class="card-img-wrapper">
                             <span class="card-tag">Family</span>
-                            <img src="../img/foto3.jpeg" alt="Nacimiento del Ebro route image" class="card-img"
-                                loading="lazy">
+                            <img src="../img/foto3.jpeg" alt="Nacimiento del Ebro" class="card-img" loading="lazy">
                         </div>
                         <div class="card-body">
-                            <h3>Nacimiento del Ebro</h3>
+                            <h2>Nacimiento del Ebro</h2>
                             <div class="card-meta">
                                 <button type="button" class="meta-item" tabindex="0" aria-describedby="tt-diff-2">
                                     <span class="material-symbols-outlined green" aria-hidden="true">timeline</span>
@@ -201,11 +199,11 @@
                     <article class="route-card route-item rutas" data-difficulty="Hard">
                         <div class="card-img-wrapper">
                             <span class="card-tag">Expert</span>
-                            <img src="../img/foto2.jpeg" alt="Cueto de la Horcada route image" class="card-img"
+                            <img src="../img/foto2.jpeg" alt="Cueto de la Horcada route" class="card-img"
                                 loading="lazy">
                         </div>
                         <div class="card-body">
-                            <h3>Cueto de la Horcada</h3>
+                            <h2>Cueto de la Horcada</h2>
                             <div class="card-meta">
                                 <button type="button" class="meta-item" tabindex="0" aria-describedby="tt-diff-3">
                                     <span class="material-symbols-outlined red" aria-hidden="true">timeline</span>
@@ -231,11 +229,10 @@
                     <article class="route-card route-item rutas" data-difficulty="Moderate">
                         <div class="card-img-wrapper">
                             <span class="card-tag">Panoramic</span>
-                            <img src="../img/foto1.jpeg" alt="Brañavieja Circular route image" class="card-img"
-                                loading="lazy">
+                            <img src="../img/foto1.jpeg" alt="Brañavieja Circular" class="card-img" loading="lazy">
                         </div>
                         <div class="card-body">
-                            <h3>Brañavieja Circular</h3>
+                            <h2>Brañavieja Circular</h2>
                             <div class="card-meta">
                                 <button type="button" class="meta-item" tabindex="0" aria-describedby="tt-diff-4">
                                     <span class="material-symbols-outlined orange" aria-hidden="true">timeline</span>
